--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "keywords": ["api", "node", "express"],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./index.js",
+    "prod": "node ./index.js"
   },
   "author": "xsismadn3ss & pardo111",
   "license": "ISC",
