--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "type": "github",
     "url": "https://github.com/xsismadn3ss/etutores-api"
   },
-  "keywords": ["api", "node", "express"],
+  "keywords": [
+    "api",
+    "node",
+    "express"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./index.js",
@@ -17,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.0",
     "mysql": "^2.18.1",
